<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_pedidos"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.moviles.domiciliosmoviles.activities.PedidosActivity"
    tools:showIn="@layout/activity_pedidos">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:hint="@string/client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre_cliente" />
        <EditText
            android:hint="@string/order_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lugar_pedido" />
        <Button
            android:text="@string/sel_metodo_pago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/payment_method"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorAccent"/>
        <TextView
            android:gravity="center"
            android:text="@string/tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <fragment android:name="com.moviles.domiciliosmoviles.fragments.PropinaFragment"
            android:id="@+id/fragment_propina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:textAllCaps="false"
            android:text="@string/find_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gps_btn"
            android:backgroundTint="@color/colorAccent"/>
        <Button
            android:textAllCaps="false"
            android:text="@string/select_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_btn"
            android:backgroundTint="@color/colorAccent"/>
        <ImageView
            android:id="@+id/client_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:text="@string/movement_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pedir_btn"
            android:backgroundTint="@color/colorAccent"/>
    </LinearLayout>

</ScrollView>
