<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.moviles.domiciliosmoviles.activities.MetodoActivity"
    tools:showIn="@layout/activity_metodo">
    <TextView
        android:padding="5dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:text="@string/seleccionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<RadioGroup
    android:id="@+id/rg_metodos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/credito_btn"
        style="Widget.Material.CompoundButton.RadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credito" />

    <RadioButton
        android:id="@+id/debito_btn"
        style="Widget.Material.CompoundButton.RadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debito" />

    <RadioButton
        android:id="@+id/efectivo_btn"
        style="Widget.Material.CompoundButton.RadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/efectivo" />
</RadioGroup>

    <Button
        android:id="@+id/select_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_met"
        android:textAllCaps="false" />
</LinearLayout>
